@@ -9,7 +9,7 @@
                            bill@newbreedsoftware.com
                    http://www.newbreedsoftware.com/tuxpaint/
 
-                         June 14, 2002 - March 4, 2004
+                         June 14, 2002 - March 23, 2004
 
      ----------------------------------------------------------------------
 
@@ -382,7 +382,7 @@ Options
                      |--------------------+------------------+---------|
                      |danish              |dansk             |         |
                      |--------------------+------------------+---------|
-                     |dutch               |                  |         |
+                     |dutch               |nederlands        |         |
                      |--------------------+------------------+---------|
                      |finnish             |suomi             |         |
                      |--------------------+------------------+---------|
@@ -426,13 +426,15 @@ Options
                      |--------------------+------------------+---------|
                      |slovak              |                  |         |
                      |--------------------+------------------+---------|
+                     |slovenian           |slovensko         |         |
+                     |--------------------+------------------+---------|
                      |swedish             |svenska           |         |
                      |--------------------+------------------+---------|
                      |tamil               |                  |         |
                      |--------------------+------------------+---------|
                      |turkish             |                  |         |
                      |--------------------+------------------+---------|
-                     |walloon             |                  |         |
+                     |walloon             |walon             |         |
                      +-------------------------------------------------+
 
      ----------------------------------------------------------------------
@@ -630,9 +632,11 @@ Options
            |---------------+-------------------+--------------------|
            |sk_SK          |                   |Slovak              |
            |---------------+-------------------+--------------------|
-           |sv_SE@euro     |Svenska            |Swedish             |
+           |sl_SI          |                   |Slovenian           |
            |---------------+-------------------+--------------------|
            |sr_YU          |                   |Serbian             |
+           |---------------+-------------------+--------------------|
+           |sv_SE@euro     |Svenska            |Swedish             |
            |---------------+-------------------+--------------------|
            |ta_IN (*)      |                   |Tamil               |
            |---------------+-------------------+--------------------|
