@@ -23,7 +23,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>June 14, 2002 - March 17, 2004</p>
+<p>June 14, 2002 - March 23, 2004</p>
 </center>
 
 <hr size=2 noshade>
@@ -515,7 +515,7 @@ New Breed Software</p>
 	  </tr>
 	  <tr>
 	    <td><code>dutch</code></td>
-	    <td>&nbsp;</td>
+	    <td><code>nederlands</code></td>
 	    <td>&nbsp;</td>
 	  </tr>
 	  <tr>
@@ -625,7 +625,7 @@ New Breed Software</p>
 	  </tr>
 	  <tr>
 	    <td><code>slovenian</code></td>
-	    <td>&nbsp;</td>
+	    <td><code>slovensko</code></td>
 	    <td>&nbsp;</td>
 	  </tr>
 	  <tr>
@@ -645,7 +645,7 @@ New Breed Software</p>
 	  </tr>
 	  <tr>
 	    <td><code>walloon</code></td>
-	    <td>&nbsp;</td>
+	    <td><code>walon</code></td>
 	    <td>&nbsp;</td>
 	  </tr>
 	  </table>
